# project_abrollo

./: .gitignore  IDEA.md  README.md  pyproject.toml
abrollo/: __init__.py  config.py
abrollo/agents/: __init__.py  hypothesis.py  hypothesis_v2.py  semi_agent.py
abrollo/cala/: __init__.py  client.py  cutoff.py  ndx.py
abrollo/dag/: __init__.py  graph.py  mvp_dag.py  propagation.py
abrollo/mc/: __init__.py  covariance.py  sim.py  sim_mvp2.py
abrollo/opt/: cvar.py
abrollo/submit/: __init__.py  client.py  validator.py
dashboard/: app.py  requirements.txt
dashboard/components/: data_loader.py  tab_graph.py  tab_history.py  tab_hypotheses.py  tab_returns.py  ui.py
data/: introspection_samples.json  nasdaq100_uuids.json  openapi.pinned.json
data/cala_entities/: ADP.json  AMAT.json  AMD.json  AMZN.json  APP.json  ARM.json  BKR.json  CCEP.json  CEG.json  COST.json  CSCO.json  CTSH.json  DDOG.json  FER.json  GEHC.json  HON.json  LIN.json  MAR.json  MELI.json  META.json  MNST.json  NXPI.json  ORLY.json  PEP.json  PLTR.json  PYPL.json  STX.json  TEAM.json  TRI.json  WDC.json  (+1 more)
scripts/: mvp2_run_all.py  mvp2_step10_submit.py  mvp2_step1_preflight.py  mvp2_step2_bulk_retrieve.py  mvp2_step3_covariance.py  mvp2_step4_graph.py  mvp2_step5_hypotheses.py  mvp2_step6_propagation.py  mvp2_step7_mc.py  mvp2_step8_optimize.py  mvp2_step9_validate.py  step10_validate.py  step11_submit.py  step1_smoke_test.py  step2_resolve_ndx.py  step3_introspect.py  step4_semi_profiles.py  step5_cutoff_test.py  step6_semi_hypotheses.py  step7_build_dag.py  step8_mc.py  step9_cvar.py
(+92 files in other folders)
