[project]
name = "abrollo"
version = "0.0.1"
description = "Monte Carlo Cathedral — Cala hackathon MVP"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.40",
    "requests>=2.32",
    "pydantic>=2.7",
    "pgmpy>=0.1.25",
    "numpy>=2.0",
    "pandas>=2.2",
    "pyarrow>=16",
    "cvxpy>=1.5",
    "python-dotenv>=1.0",
    "tenacity>=8.3",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "networkx>=3.2",
    "scikit-learn>=1.5",
    "clarabel>=0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["abrollo"]
